--- a/html/log-in.html
+++ b/html/log-in.html
@@ -93,11 +93,11 @@
     
     <br>
 
-    <a href="../html/iniciodejuego.html"><button>Iniciar sesion</button></a>
+    <a href="../html/inicio.html"><button>Iniciar sesion</button></a>
 
     <br>
     <br>
 
-    <a href="../html/iniciologin.html">Registrarse</a>
+    <a href="../html/sing-in.html">Registrarse</a>
 </body>
 </html>
