--- a/html/sing-in.html
+++ b/html/sing-in.html
@@ -48,7 +48,7 @@
 
     <br>
 
-    <a href="../html/iniciodejuego.html"><Button>Iniciar sesion</Button></a>
+    <a href="../html/inicio.html"><Button>Iniciar sesion</Button></a>
     
 </body>
 </html>
