--- a/html/Preguntas.html
+++ b/html/Preguntas.html
@@ -9,7 +9,36 @@
 
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <div id="tablero-de-juego">
+
+        <div id="pregunta">
+            pregunta
+        </div>
+
+        <div id="opcion 1">
+            opcion 1
+        </div>
+
+        <div id="opcion 2">
+            opcion 2
+        </div>
+
+        <div id="opcion 3">
+            opcion 3
+        </div>
+
+        <div id="opcion 4">
+            opcion 4
+        </div>
+
+        <div id="opcion 5">
+            opcion 5
+        </div>
+
+    </div>
+
 </body>
 </html>
