Se le dio un estilo inicial de como va hacer y se va a agregar funcionalidades preguntas.js

--- a/html/Preguntas.html
+++ b/html/Preguntas.html
@@ -16,6 +16,8 @@
 
         <div id="pregunta">
             pregunta
+            <br>
+            <img src="../images/presidente.jpg" style="width: 90%; height: 100px; object-fit: contain;" alt="imagen">
         </div>
 
         <div class="opcion" id="opcion 1">
